Style: fix non-horizontal ul.collapsible-tree subtree alignment

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -192,6 +192,9 @@ header > h1.main-title
 
 // NOTE(jordan): only supports sublists 1 level deep
 ul.collapsible-tree
+  li
+    ul
+      margin-left li-bullet-space * 2
   &[horizontal]
     display flex
     flex-wrap wrap
